# BranchingVineRobot

./: .gitignore  README.md  install_dependencies.sh  requirements.txt
firmware/: README.md  server.py
firmware/Arduino Nano/src/: main.cpp
firmware/ESP32POE/: platformio.ini  test.py
firmware/ESP32POE/src/: main.cpp
firmware/PCA9685/: platformio.ini
firmware/PCA9685/src/: main.cpp
firmware/Teensy 4.1/: platformio.ini
firmware/Teensy 4.1/src/: bldc.cpp  encoder.cpp  main.cpp  servo.cpp
firmware/arduino_nano/: platformio.ini
firmware/arduino_nano/src/: main.cpp
firmware/esp32poe/: README.md
firmware/processor/: ip_scanner.py  realsense_serial_no.py  realsense_test.py
src/branching_vine_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/branching_vine_robot/branching_vine_robot/: __init__.py  cluster.py  clusterV2.py  config.py  control.py  gui.py  plot.py  pneumatics.py  projection_cluster.py  server.py  state.py
src/branching_vine_robot/branching_vine_robot/clustering/: clusterV3.py  clusterV4.py  clusterV5.py  clusterV6.py
src/branching_vine_robot/branching_vine_robot/utils/: helper.py  kinematics.py  utils.py
src/branching_vine_robot/launch/: multi.launch.py  robot.launch.py  single.launch.py
src/custom_interfaces/: CMakeLists.txt
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Cluster.msg  Clusters.msg  DepthClustered.msg
src/interfaces/msgs/: Cluster.msg  PointCloud.msg
